refactor : BakeryController::getBakeryList 리팩토링 완료